fix mobile spacing

--- a/css/index.css
+++ b/css/index.css
@@ -517,7 +517,7 @@ color: #FFFDF6;
           width: 100%;
           margin: 44vh 0 0 0;
           padding-bottom:30vh;
-          height:50vh;
+          height:56vh;
 
       }
 
